--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
-.App {
+/* .App {
   text-align: center;
-}
+} */
 
 .App-logo {
   height: 40vmin;
@@ -26,6 +26,10 @@
 
 .App-link {
   color: #61dafb;
+}
+
+.MuiTableCell-root,.MuiTableCell-root {
+  border: 1px solid black !important;
 }
 
 @keyframes App-logo-spin {
