--- a/src/components/phoneInput.css
+++ b/src/components/phoneInput.css
@@ -1,3 +1,8 @@
-.react-tel-input .form-control{
-    width:   '10px ' !important;
+.react-tel-input {
+    width:   '100% ' !important;
   }
+
+.input{
+  width: 100%;
+}
+  
